个人中心接口接入

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -116,7 +116,17 @@ dependencies {
     implementation 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
 
     implementation 'org.apmem.tools:layouts:1.10@aar'
-    implementation 'cn.jzvd:jiaozivideoplayer:6.4.3'
+
+    implementation 'cn.jzvd:jiaozivideoplayer:7.0_preview'
+    implementation 'com.google.android.exoplayer:exoplayer:2.9.1'
+    implementation 'tv.danmaku.ijk.media:ijkplayer-java:0.8.8'
+    implementation 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.8.4'
+
+
+    implementation ('com.zhihu.android:matisse:0.5.2-beta4'){
+        exclude group: 'com.android.support'
+    }
+
 
 
 }
