--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,12 +38,10 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.0'
-
     //support
     implementation "com.android.support:appcompat-v7:$rootProject.ext.supportVersion"
     implementation "com.android.support:design:$rootProject.ext.supportVersion"
@@ -55,84 +53,55 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
     // add for room
-    implementation "android.arch.persistence.room:runtime:1.1.1"
+    implementation 'android.arch.persistence.room:runtime:1.1.1'
     // room 配合 RxJava
-    implementation "android.arch.persistence.room:rxjava2:1.1.1"
+    implementation 'android.arch.persistence.room:rxjava2:1.1.1'
     kapt 'android.arch.persistence.room:compiler:1.1.1'
-
     //屏幕适配
     implementation 'me.jessyan:autosize:1.1.2'
     // Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.0'
-
     implementation 'com.orhanobut:hawk:2.0.1'
-
     //ARouter
     implementation('com.alibaba:arouter-api:1.4.1') {
         exclude group: 'com.android.support'
     }
     kapt 'com.alibaba:arouter-compiler:1.2.2'
-
     //logger
     implementation 'com.orhanobut:logger:2.2.0'
-
-
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
-
     //rxJava
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.4'
-
     implementation 'com.jakewharton.rxbinding3:rxbinding:3.0.0-alpha2'
-
     //rxpermissions
     implementation 'com.github.tbruyelle:rxpermissions:0.10.2'
-
     implementation 'com.github.MikeOrtiz:TouchImageView:1.4.0'
-
-    implementation 'me.dkzwm.widget.srl:core:1.6.6'
-    implementation 'me.dkzwm.widget.srl:ext-util:1.6.6'
-    implementation 'me.dkzwm.widget.srl:ext-classics:1.6.6'
-
+    implementation 'me.dkzwm.widget.srl:core:1.6.6.7'
+    implementation 'me.dkzwm.widget.srl:ext-util:1.6.6.7'
+    implementation 'me.dkzwm.widget.srl:ext-classics:1.6.6.7'
     implementation 'com.github.bumptech.glide:glide:4.2.0'
     implementation 'jp.wasabeef:glide-transformations:3.0.1'
-
     implementation 'com.liulishuo.filedownloader:library:1.7.6'
-
-
     implementation 'com.sdsmdg.harjot:materialshadows:1.2.5'
-
-
     implementation 'com.ogaclejapan.smarttablayout:library:1.7.0@aar'
     implementation 'com.ogaclejapan.smarttablayout:utils-v4:1.7.0@aar'
-
     implementation 'com.youth.banner:banner:1.4.10'
     implementation 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
-
     implementation 'org.apmem.tools:layouts:1.10@aar'
-
     implementation 'cn.jzvd:jiaozivideoplayer:7.0_preview'
     implementation 'com.google.android.exoplayer:exoplayer:2.9.1'
     implementation 'tv.danmaku.ijk.media:ijkplayer-java:0.8.8'
     implementation 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.8.4'
-
-
-    implementation ('com.zhihu.android:matisse:0.5.2-beta4'){
+    implementation('com.zhihu.android:matisse:0.5.2-beta4') {
         exclude group: 'com.android.support'
     }
-
-
-
     implementation 'com.contrarywind:Android-PickerView:4.1.8'
-
     implementation 'com.danikula:videocache:2.7.1'
-
-
-
+    implementation files('libs/OpenInstall_v2.2.2.jar')
 }
