--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,4 +104,7 @@ dependencies {
     implementation 'com.contrarywind:Android-PickerView:4.1.8'
     implementation 'com.danikula:videocache:2.7.1'
     implementation files('libs/OpenInstall_v2.2.2.jar')
+
+    implementation 'com.google.zxing:core:3.2.1'
+    implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
 }
