--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
     <application
             android:allowBackup="true"
-            android:icon="@mipmap/houzi"
+            android:icon="@mipmap/logo"
             android:label="@string/app_name"
             android:supportsRtl="true"
             android:name=".App"
@@ -34,13 +34,15 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name="com.jyt.video.main.MainActivity" android:launchMode="singleTask">
+        <activity android:name="com.jyt.video.main.MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
                 <category android:name="android.intent.category.DEFAULT"/>
                 <category android:name="android.intent.category.BROWSABLE"/>
                 <data android:scheme="x98kap"/>
+
             </intent-filter>
+
         </activity>
         <activity android:name=".login.LoginAct" android:label="登录">
 
