--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ apply plugin: 'kotlin-kapt'
 android {
     signingConfigs {
         debug {
-            storeFile file('../video')
+            storeFile file('../video.jks')
             storePassword '123456'
             keyAlias = 'video'
             keyPassword '123456'
@@ -18,6 +18,7 @@ android {
     }
     compileSdkVersion rootProject.ext.compileSdkVersion
     defaultConfig {
+        // APP标识名，区别APP用
         applicationId "com.jyt.video"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
