添加微信支付 支付宝支付

--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,11 @@ allprojects {
         maven { url 'https://jitpack.io' }
         maven { url 'https://maven.google.com' }
         jcenter()
-        
+        // 添加下面的内容
+        flatDir {
+            dirs 'libs'
+        }
+
     }
 }
 
