--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,9 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         javaCompileOptions {
             annotationProcessorOptions {
+                includeCompileClasspath true
                 arguments += [AROUTER_MODULE_NAME: project.getName()]
+
             }
         }
     }
@@ -94,6 +96,9 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.4'
     implementation 'com.jakewharton.rxbinding3:rxbinding:3.0.0-alpha2'
+
+    implementation 'com.zhy:okhttputils:2.6.2'
+
     //rxpermissions
     implementation 'com.github.tbruyelle:rxpermissions:0.10.2'
     implementation 'com.github.MikeOrtiz:TouchImageView:1.4.0'
@@ -122,4 +127,12 @@ dependencies {
 
     implementation 'com.google.zxing:core:3.2.1'
     implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
+
+    implementation 'com.arialyy.aria:aria-core:3.6.6'
+    kapt 'com.arialyy.aria:aria-compiler:3.6.6'
+
+    //微信sdk
+    implementation 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:5.4.0'
+    //支付宝sdk
+    implementation  (name: 'alipaySdk-15.6.5-20190718211159-noUtdid', ext: 'aar')
 }
