--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,9 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"></uses-permission>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <application
             android:allowBackup="true"
             android:icon="@mipmap/logo1"
@@ -84,6 +87,13 @@
         <activity android:name=".video.SearchResultAct"/>
         <activity android:name=".setting.account.ModifyPsdAct" android:label="修改密码"/>
         <activity android:name=".video.BrowseImageAct" android:label="浏览图片"/>
+        <activity android:name=".video.TestAct" >
+
+        </activity>
+        <activity android:name=".video.DownLoadVideoAct"/>
+
+        <activity android:name=".wxapi.WXEntryActivity" android:exported="true"/>
+        <activity android:name=".wxapi.WXPayEntryActivity" android:exported="true"/>
     </application>
 
 </manifest>
