--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,8 +18,9 @@ android {
     }
     compileSdkVersion rootProject.ext.compileSdkVersion
     defaultConfig {
-        // APP标识名，区别APP用
-        applicationId "com.jyt.video"
+//         APP标识名，区别APP用
+//        applicationId "com.jyt.video"
+        applicationId "com.ysj.video"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode rootProject.ext.versionCode
@@ -135,4 +136,9 @@ dependencies {
     implementation 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:5.4.0'
     //支付宝sdk
     implementation  (name: 'alipaySdk-15.6.5-20190718211159-noUtdid', ext: 'aar')
+
+    implementation 'com.wingjay:blurimageviewlib:2.0.1'
+    implementation 'com.github.Commit451:NativeStackBlur:1.0.5'
+
+
 }
