--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,10 +89,10 @@ dependencies {
     kapt 'com.alibaba:arouter-compiler:1.2.2'
     //logger
     implementation 'com.orhanobut:logger:2.2.0'
-    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.6.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.0'
     //rxJava
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.4'
@@ -140,5 +140,6 @@ dependencies {
     implementation 'com.wingjay:blurimageviewlib:2.0.1'
     implementation 'com.github.Commit451:NativeStackBlur:1.0.5'
 
+    implementation 'com.qmuiteam:qmui:1.4.0'
 
 }
